# 2025ESWContest_mobility_ORAI

./: README.md
src/UWB/: ArduinoMega.ino  ESP32_ROS_Bridge.ino  initiator.ino  motor_control.ino  responder.ino  smart_stopper_client.py
src/UWB/StandardRTLSAnchorB_TWR/: StandardRTLSAnchorB_TWR.ino
src/UWB/StandardRTLSAnchorMain_TWR/: StandardRTLSAnchorMain_TWR.ino
src/car/: car.ino
src/car_gui/: Smart_parking_car_GUI.py  gui_app.py  main_launcher.py
src/gate/: gate.ino
src/server/microros_ws/: topic_catcher.py
src/server/microros_ws/rosbag2_2025_08_25-17_06_59/: metadata.yaml  rosbag2_2025_08_25-17_06_59_0.mcap
src/server/microros_ws/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/server/microros_ws/src/log/: latest_build
src/server/park_ws/src/parking_exe/: package.xml  setup.cfg  setup.py
src/server/park_ws/src/parking_exe/launch/: parking_exe.launch.py
src/server/park_ws/src/parking_exe/parking_exe/: alert_dummy.py  parking_exe.py  spot4_dummy.py
src/server/park_ws/src/parking_exe/parking_exe/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/server/park_ws/src/parking_exe/parking_exe/log/: latest_build
src/server/park_ws/src/parking_management/: package.xml  setup.cfg  setup.py
src/server/park_ws/src/parking_management/config/: parking_config.yaml
src/server/park_ws/src/parking_management/launch/: parking_system.launch.py
src/server/park_ws/src/parking_management/parking_management/: dummy.py  parking_management.py
src/server/uwb_ws/src/uwb_parser/: package.xml  setup.py
src/server/uwb_ws/src/uwb_parser/launch/: uwb_parser.launch.py
src/server/uwb_ws/src/uwb_tracking/: package.xml  setup.cfg  setup.py
src/server/uwb_ws/src/uwb_tracking/msg/: UWBTag.msg
src/server/uwb_ws/src/uwb_tracking/uwb_tracking/: uwb_receiver.py
(+12 files in other folders)
