<?xml version="1.0"?>
<package format="3">
  <name>parking_exe</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="sy@todo.todo">sy</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <!-- PyQt5 의존성 추가 -->
  <exec_depend>python3-pyqt5</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>